# chance-rs

./: Cargo.toml
src/: lib.rs  rand.rs  rand_in.rs  shuffle.rs
src/arch/: mod.rs  x86.rs
src/ext/: mod.rs  slice.rs
src/os/unix/: mod.rs  std.rs
src/platform/: mod.rs
src/platform/apple/: mod.rs  secure.rs
src/platform/unix/: std.rs
src/rng/: io.rs  mod.rs  panic.rs
